--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -53,9 +53,12 @@ jobs:
           # queries: security-extended,security-and-quality
 
       - name: Set up dotnet
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v2
         with:
           dotnet-version: "6.0.*"
+
+      - name: Add GitHub Packages as NuGet source
+        run: dotnet nuget update source github --username ${{ secrets.GH_NUGET_AUTH_USERNAME }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
 
       # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
       # If this step fails, then you should remove it and run the build manually (see below)
