Finish account and role management

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -20,6 +20,7 @@
   "SeedAdminUsers": [],
   "LocalDevSettings": {
     "AuthenticatedUser": true,
+    "AuthenticatedUserIsAdmin": true,
     "BuildLocalDb": false,
     "UseEfMigrations": false
   }
