Update .gitignore file to ignore JetBrains config folder

--- a/.gitignore
+++ b/.gitignore
@@ -528,3 +528,6 @@ appsettings.*.json
 
 # Build folders
 .artifacts/
+
+# Note: Remove the next line if you want to check in JetBrains configuration files.
+.idea/
