Change the LocalDB temporay name

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GITHUB_REPO_NAME-local"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=template-local"
   },
   "Logging": {
     "LogLevel": {
