--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -16,6 +16,10 @@
     "ClientId": "[Enter the Application (client) ID from the Azure portal]",
     "ClientSecret": "[Enter a Client Secret from the Azure portal]"
   },
+  "RaygunSettings": {
+    "ExcludeErrorsFromLocal": true,
+    "ApiKey": ""
+  },
   "PersistedFilesBasePath": "../../.artifacts/_appFiles",
   "SeedAdminUsers": [],
   "LocalDevSettings": {
