Add Swagger API documentation

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=template-app"
   },
+  "SupportEmail": "support@gaepd.zendesk.com",
+  "SeedAdminUsers": [],
+  "PersistedFilesBasePath": "../../.artifacts/_appFiles",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -20,8 +23,6 @@
     "ExcludeErrorsFromLocal": true,
     "ApiKey": ""
   },
-  "PersistedFilesBasePath": "../../.artifacts/_appFiles",
-  "SeedAdminUsers": [],
   "LocalDevSettings": {
     "AuthenticatedUser": true,
     "AuthenticatedUserIsAdmin": true,
