Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
 ### NOTE: Project-specific rules are at the bottom of this file.
 
 ### Generic rules ###
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,jetbrains
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,jetbrains
 
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,rider,cypressio
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,rider,cypressio
-
-### CypressIO ###
-# gitignore template for the CypressIO, browser test framework
-# website: https://www.cypress.io/
-
-cypress/results/*
-cypress/reports/*
-cypress/screenshots/*
-cypress/videos/*
-
-### Rider ###
+### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -92,6 +82,40 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+### JetBrains Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
+
+# Sonarlint plugin
+# https://plugins.jetbrains.com/plugin/7973-sonarlint
+.idea/**/sonarlint/
+
+# SonarQube Plugin
+# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
+.idea/**/sonarIssues.xml
+
+# Markdown Navigator plugin
+# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
+.idea/**/markdown-navigator.xml
+.idea/**/markdown-navigator-enh.xml
+.idea/**/markdown-navigator/
+
+# Cache file creation bug
+# See https://youtrack.jetbrains.com/issue/JBR-2257
+.idea/$CACHE_FILE$
+
+# CodeStream plugin
+# https://plugins.jetbrains.com/plugin/12206-codestream
+.idea/codestream.xml
+
+# Azure Toolkit for IntelliJ plugin
+# https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
+.idea/**/azureSettings.xml
 
 ### VisualStudioCode ###
 .vscode/*
@@ -512,13 +536,13 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,rider,cypressio
+# End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,jetbrains
 
 ########################
 ### Project-specific ###
 
-# SonarLint plugin
-.idea/**/sonarlint/
+# Note: Remove the next line if you want to check in JetBrains configuration files.
+.idea/
 
 # Web deploy settings
 !**/PublishProfiles/*.pubxml
@@ -529,8 +553,8 @@ appsettings.*.json
 # Build folders
 .artifacts/
 
-# Note: Remove the next line if you want to check in JetBrains configuration files.
-.idea/
+# Library files (if managed by Microsoft Library Manager)
+**/wwwroot/lib/
 
-# Code Coverage from reportgenerator
+# Code coverage report from ReportGenerator
 coveragereport/
