--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="GaEpd.AppLibrary" Version="0.4.0-beta" />
+        <PackageReference Include="GaEpd.AppLibrary" Version="1.0.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
-        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.8" />
-        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.44.0.52574">
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.9" />
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.46.0.54807">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
