--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -9,8 +9,9 @@ jobs:
   lighthouse-check:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
+    - name: Checkout repository
+        uses: actions/checkout@v3
+        run: mkdir -p ${{ github.workspace }}/tmp/artifacts
     
     - name: Set up .NET
       uses: actions/setup-dotnet@v2
