fix syntax error

--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -9,9 +9,8 @@ jobs:
   lighthouse-check:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-        uses: actions/checkout@v3
-        run: mkdir -p ${{ github.workspace }}/tmp/artifacts
+    - uses: actions/checkout@v3
+    - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
     
     - name: Set up .NET
       uses: actions/setup-dotnet@v2
