--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -31,5 +31,7 @@ jobs:
         LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
       run: |
         cd src/WebApp
-        npm install -g @lhci/cli@0.8.x
-        lhci autorun
+        dotnet run &
+
+      - name: Build
+      run: curl https://localhost:7229
