--- a/lighthouse-config.json
+++ b/lighthouse-config.json
@@ -1,7 +1,7 @@
 {
     "config": {
       "settings": {
-        "onlyCategories": ["performance", "accessibility"]
+        "onlyCategories": ["performance"]
       }
     },
     "options": {
