remove the chrome flags

--- a/lighthouse-config.json
+++ b/lighthouse-config.json
@@ -1,12 +1,7 @@
 {
     "config": {
       "settings": {
-        "onlyCategories": ["performance"]
+        "onlyCategories": ["performance", "accessibility"]
       }
-    },
-    "options": {
-      "chromeFlags": [
-        "--ignore-certificate-errors"
-      ]
     }
-  }
+}
