--- a/lighthouse-config.json
+++ b/lighthouse-config.json
@@ -1,7 +1,7 @@
 {
     "config": {
       "settings": {
-        "onlyCategories": ["performance", "accessibility", "best practice"]
+        "onlyCategories": ["Performance", "Accessibility", "BestPractices"]
       }
     }
 }
