attempt to get best practices to work again 2

--- a/lighthouse-config.json
+++ b/lighthouse-config.json
@@ -1,7 +1,7 @@
 {
     "config": {
       "settings": {
-        "onlyCategories": ["Performance", "Accessibility", "BestPractices"]
+        "onlyCategories": ["performance", "accessibility", "bestpractices"]
       }
     }
 }
