--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -33,15 +33,18 @@ jobs:
         cd src/WebApp
         dotnet run &
 
-    - run: mkdir /tmp/artifacts
+    - name: Create temporary folder for artifacts storage
+      run: mkdir /tmp/lighthouse-artifacts
+
+    # It runs the lighthouse report for a provided url and create a HTML report in the specified directory
+    # Action documentation: https://github.com/marketplace/actions/lighthouse-check#usage-standard-example
     - name: Run Lighthouse
       uses: foo-software/lighthouse-check-action@master
       with:
         prCommentAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-        prCommentUrl: "https://api.github.com/repos/gaepdit/template-app/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews"
-        outputDirectory: /tmp/artifacts
+        outputDirectory: /tmp/artifacts # Used to upload artifacts.
         urls: 'https://localhost:7229'
-        emulatedFormFactor: 'all'
+        emulatedFormFactor: 'all' # Run LightHouse against "mobile", "desktop", or "all" devices
         overridesJsonFile: './lighthouse-config.json'
     
     - name: Upload artifacts
@@ -49,3 +52,17 @@ jobs:
       with:
         name: Lighthouse reports
         path: /tmp/artifacts
+
+    # Using a pre-build action to make the action fail if your score is too low. It can be really interesting to track a low score on a commit
+    # You can remove this action IF you don't want lighthouse to be a blocking point in your CI
+    # This default values so you need to change them by your own criteria
+    # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
+    - name: Handle Lighthouse Check results
+      uses: foo-software/lighthouse-check-status-action@v1.0.1
+      with:
+        lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+        minAccessibilityScore: "50"
+        minBestPracticesScore: "50"
+        minPerformanceScore: "50"
+        minProgressiveWebAppScore: "50"
+        minSeoScore: "50"
