--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -59,11 +59,11 @@ jobs:
     # This default values so you need to change them by your own criteria
     # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
     - name: Handle Lighthouse Check results
-      uses: foo-software/lighthouse-check-status-action@v1.0.1
+      uses: ./
       with:
         lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
         minAccessibilityScore: "50"
         minBestPracticesScore: "50"
-        minPerformanceScore: "50"
+        minPerformanceScore: "95"
         minProgressiveWebAppScore: "50"
         minSeoScore: "50"
