--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -46,24 +46,10 @@ jobs:
         outputDirectory: /tmp/artifacts # Used to upload artifacts.
         urls: 'https://localhost:7229'
         emulatedFormFactor: 'all' # Run LightHouse against "mobile", "desktop", or "all" devices
-       
+        overridesJsonFile: './lighthouse-config.json'
     
     - name: Upload artifacts
       uses: actions/upload-artifact@master
       with:
         name: Lighthouse reports
         path: /tmp/artifacts
-
-    # Using a pre-build action to make the action fail if your score is too low. It can be really interesting to track a low score on a commit
-    # You can remove this action IF you don't want lighthouse to be a blocking point in your CI
-    # This default values so you need to change them by your own criteria
-    # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
-    - name: Handle Lighthouse Check results
-      uses: ./
-      with:
-        lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
-        minAccessibilityScore: "50"
-        minBestPracticesScore: "50"
-        minPerformanceScore: "95"
-        minProgressiveWebAppScore: "50"
-        minSeoScore: "50"
