--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -1,3 +1,4 @@
+
 name: Lighthouse Check
 on: 
   push:
@@ -19,9 +20,6 @@ jobs:
       with:
         node-version: 16
 
-    - name: Install foo-software Lighthouse
-      run: npm install @foo-software/lighthouse-check
-
     - name: Restore dependencies
       run: dotnet restore
 
@@ -29,23 +27,20 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Run Web Server in the background
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+        LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
       run: |
         cd src/WebApp
         dotnet run &
-
-    - name: Create temporary folder for artifacts storage
-      run: mkdir /tmp/lighthouse-artifacts
-
-    # It runs the lighthouse report for a provided url and create a HTML report in the specified directory
-    # Action documentation: https://github.com/marketplace/actions/lighthouse-check#usage-standard-example
+    - run: mkdir /tmp/artifacts
     - name: Run Lighthouse
       uses: foo-software/lighthouse-check-action@master
       with:
         accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-        prCommentEnabled: true
-        outputDirectory: /tmp/artifacts # Used to upload artifacts.
+        outputDirectory: /tmp/artifacts
         urls: 'https://localhost:7229'
-        emulatedFormFactor: 'all' # Run LightHouse against "mobile", "desktop", or "all" devices
+        emulatedFormFactor: 'all'
         overridesJsonFile: './lighthouse-config.json'
     
     - name: Upload artifacts
@@ -53,3 +48,17 @@ jobs:
       with:
         name: Lighthouse reports
         path: /tmp/artifacts
+
+    # Using a pre-build action to make the action fail if your score is too low. It can be really interesting to track a low score on a commit
+    # You can remove this action IF you don't want lighthouse to be a blocking point in your CI
+    # This default values so you need to change them by your own criteria
+    # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
+    - name: Handle Lighthouse Check results
+      uses: ./
+      with:
+        lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+        minAccessibilityScore: "50"
+        minBestPracticesScore: "50"
+        minPerformanceScore: "95"
+        minProgressiveWebAppScore: "50"
+        minSeoScore: "50"
