--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -54,7 +54,7 @@ jobs:
     # This default values so you need to change them by your own criteria
     # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
     - name: Handle Lighthouse Check results
-      uses: ./
+      uses: ./tmp/artifacts
       with:
         lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
         minAccessibilityScore: "50"
