add id to prevent results.reduce is not a function error

--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -33,6 +33,7 @@ jobs:
 
     - name: Run Lighthouse
       uses: foo-software/lighthouse-check-action@master
+      id: lighthouseCheck
       with:
         accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
         outputDirectory: /tmp/lighthouse-artifacts
