--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -32,7 +32,7 @@ jobs:
       run: mkdir /tmp/lighthouse-artifacts
 
     - name: Run Lighthouse
-      uses: foo-software/lighthouse-check-action@master
+      uses: foo-software/lighthouse-check-action@v9.0.0
       id: lighthouseCheck
       with:
         accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
@@ -47,7 +47,7 @@ jobs:
     # This default values so you need to change them by your own criteria
     # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
     - name: Handle Lighthouse Check results
-      uses: foo-software/lighthouse-check-status-action@master
+      uses: foo-software/lighthouse-check-status-action@1.0.1
       with:
         lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
         minAccessibilityScore: "50"
@@ -55,7 +55,7 @@ jobs:
         minPerformanceScore: "50"
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v3.1.0
       with:
         name: Lighthouse reports
         path: /tmp/lighthouse-artifacts
