--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -48,7 +48,7 @@ jobs:
     # This default values so you need to change them by your own criteria
     # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
     - name: Handle Lighthouse Check results
-      uses: foo-software/lighthouse-check-status-action@1.0.1
+      uses: foo-software/lighthouse-check-status-action@v1.0.1
       with:
         lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
         minAccessibilityScore: "50"
