--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -31,36 +31,15 @@ jobs:
 
     - name: Installing Lighthouse through NPM
       run: |
-        ls
-
-    - name: Create temporary folder for artifacts storage
-      run: mkdir /tmp/lighthouse-artifacts
-
-    - name: Run Lighthouse
-      uses: foo-software/lighthouse-check-action@v9.0.0
-      id: lighthouseCheck
-      with:
-        gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-        outputDirectory: /tmp/lighthouse-artifacts
-        urls: 'https://localhost:7229'
-        emulatedFormFactor: 'all'
-        overridesJsonFile: '.github/workflows/.lighthouse/lighthouse-config.json'
-        timeout: "5" # timeout after 5 minutes
-
-    # Using a pre-build action to make the action fail if your score is too low. It can be really interesting to track a low score on a commit
-    # You can remove this action IF you don't want lighthouse to be a blocking point in your CI
-    # This default values so you need to change them by your own criteria
-    # Official documentation: https://github.com/foo-software/lighthouse-check-status-action
-    - name: Handle Lighthouse Check results
-      uses: foo-software/lighthouse-check-status-action@v1.0.1
-      with:
-        lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
-        minAccessibilityScore: "50"
-        minBestPracticesScore: "50"
-        minPerformanceScore: "50"
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3.1.0
-      with:
-        name: Lighthouse reports
-        path: /tmp/lighthouse-artifacts
+        cd .github/workflows/.lighthouse
+        npm install
+      
+    - name: Run Lighthouse Check
+      run: |
+        node ./dist/bin/lighthouse-check.js \
+        --verbose \
+        --prCommentEnabled \
+        --emulatedFormFactor "all" \
+        --urls "https://localhost:7229" \
+        --prCommentAccessToken "${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}" \
+        --prCommentUrl "https://api.github.com/repos/gaepdit/template-app/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews"
