testing Lighthouse CLI 2

--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -31,15 +31,15 @@ jobs:
 
     - name: Installing Lighthouse through NPM
       run: |
-        cd .github/workflows/.lighthouse
-        npm install
+        npm install @foo-software/lighthouse-check
       
     - name: Run Lighthouse Check
       run: |
-        node ./dist/bin/lighthouse-check.js \
-        --verbose \
-        --prCommentEnabled \
+        ls
+        node ./dist/bin/lighthouse-check.js --verbose --prCommentEnabled \
         --emulatedFormFactor "all" \
         --urls "https://localhost:7229" \
         --prCommentAccessToken "${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}" \
-        --prCommentUrl "https://api.github.com/repos/gaepdit/template-app/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews"
+        --prCommentUrl "https://api.github.com/repos/foo-software/lighthouse-check/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews"
+
+    
