--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -35,11 +35,6 @@ jobs:
       
     - name: Run Lighthouse Check
       run: |
-        ls
-        node ./dist/bin/lighthouse-check.js --verbose --prCommentEnabled \
-        --emulatedFormFactor "all" \
-        --urls "https://localhost:7229" \
-        --prCommentAccessToken "${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}" \
-        --prCommentUrl "https://api.github.com/repos/foo-software/lighthouse-check/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews"
+        lighthouse-check --v
 
     
