testing Lighthouse CLI 2

--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -35,6 +35,6 @@ jobs:
       
     - name: Run Lighthouse Check
       run: |
-        lighthouse-check --v
+        lighthouse-check --version
 
     
