--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -35,6 +35,12 @@ jobs:
       
     - name: Run Lighthouse Check
       run: |
-        lighthouse-check --version
+        lighthouse-check \
+        --verbose \
+        --prCommentEnabled \
+        --emulatedFormFactor "all" \
+        --urls "https://www.foo.software,https://www.automated-lighthouse-check.com/" \
+        --prCommentAccessToken "${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}" \
+        --prCommentUrl "https://api.github.com/repos/foo-software/lighthouse-check/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews"
 
     
