--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -31,7 +31,7 @@ jobs:
     
     - name: Create temporary folder for artifacts storage
       run: mkdir /tmp/lighthouse-artifacts
-      
+
     - name: Installing Lighthouse through NPM
       run: |
         npm install -g @foo-software/lighthouse-check
@@ -47,11 +47,11 @@ jobs:
         --timeout "5" \
         --overridesJsonFile: ".github/workflows/lighthouse-config.json" \
         --urls "https://localhost:7229" \
-        --outputDirectory /tmp/artifacts
+        --outputDirectory /tmp/lighthouse-artifacts
 
     - name: Handle Lighthouse Check results
       run: |
-        lighthouse-check-status --outputDirectory /tmp/artifacts \
+        lighthouse-check-status --outputDirectory /tmp/lighthouse-artifacts \
         --minAccessibilityScore 40 \
         --minBestPracticesScore 40 \
         --minPerformanceScore 40 \
