--- a/.github/workflows/lighthouse-analysis.yml
+++ b/.github/workflows/lighthouse-analysis.yml
@@ -43,12 +43,11 @@ jobs:
         --prCommentEnabled \
         --emulatedFormFactor "all" \
         --prCommentAccessToken "${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}" \
-        --prCommentUrl "https://api.github.com/repos/gaepdit/template-app/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews" \
+        --prCommentUrl "https://api.github.com/repos/patdnr/testing/pulls/$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')/reviews" \
         --timeout "5" \
-        --overridesJsonFile: ".github/workflows/lighthouse-config.json" \
+        --overridesJsonFile ".github/workflows/lighthouse-config.json" \
         --urls "https://localhost:7229" \
         --outputDirectory /tmp/lighthouse-artifacts
-
     - name: Handle Lighthouse Check results
       run: |
         lighthouse-check-status --outputDirectory /tmp/lighthouse-artifacts \
