--- a/.github/workflows/raygun-deployment.yml
+++ b/.github/workflows/raygun-deployment.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   raygun-deployment:
+    name: Send deployment info to Raygun
     runs-on: ubuntu-latest
     steps:
       - name: Get the version number
