--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -1,17 +1,18 @@
-name: Scan with SonarCloud
+name: SonarCloud Scan
+
 on:
   push:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened]
+
 jobs:
-  build:
+  sonarcloud-scan:
     # ↓ Change this to "false" to disable the workflow without any alert messages.
     if: ${{ true }}
-    # ↑ Change to "true" to enable the workflow.
+    # ↑ Change to "true" (or delete) to enable the workflow.
 
-    name: Build
+    name: Analyze with SonarCloud
     runs-on: windows-latest
     steps:
       - name: Set up JDK 11
