Add Lighthouse analysis workflow (#48)
Co-authored-by: Doug Waldron <douglas.waldron@dnr.ga.gov>

--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -1,4 +1,4 @@
-name: Build and scan with SonarCloud
+name: Scan with SonarCloud
 on:
   push:
     branches:
@@ -10,6 +10,7 @@ jobs:
     # ↓ Change this to "false" to disable the workflow without any alert messages.
     if: ${{ true }}
     # ↑ Change to "true" to enable the workflow.
+
     name: Build
     runs-on: windows-latest
     steps:
