Add support for SQL Server-specific unit tests

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
     <PropertyGroup>
-        <BaseOutputPath>$(MSBuildThisFileDirectory).artifacts\$(MSBuildProjectName)\bin\</BaseOutputPath>
-        <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory).artifacts\$(MSBuildProjectName)\obj\</BaseIntermediateOutputPath>
+        <BaseProjectArtifactPath>$(MSBuildThisFileDirectory).artifacts\$(MSBuildProjectName)</BaseProjectArtifactPath>
+        <BaseOutputPath>$(BaseProjectArtifactPath)\bin\</BaseOutputPath>
+        <BaseIntermediateOutputPath>$(BaseProjectArtifactPath)\obj\</BaseIntermediateOutputPath>
     </PropertyGroup>
 </Project>
