--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="GaEpd.AppLibrary" Version="1.1.0" />
-        <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
-        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.12" />
-        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.51.0.59060">
+        <PackageReference Include="GaEpd.AppLibrary" />
+        <PackageReference Include="JetBrains.Annotations" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" />
+        <PackageReference Include="SonarAnalyzer.CSharp">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
