Rename EfRepository folder/namespace

--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -24,7 +24,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\LocalRepository\LocalRepository.csproj" />
-        <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+        <ProjectReference Include="..\EfRepository\EfRepository.csproj" />
     </ItemGroup>
 
     <ItemGroup>
