--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,12 +9,13 @@
         <PackageVersion Include="GaEpd.AppLibrary" Version="1.1.0" />
         <PackageVersion Include="JetBrains.Annotations" Version="2022.3.1" />
         <PackageVersion Include="LigerShark.WebOptimizer.Core" Version="3.0.372" />
-        <PackageVersion Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="6.0.13" />
         <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.13" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.13" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
         <PackageVersion Include="Microsoft.Extensions.Identity.Stores" Version="6.0.13" />
+        <PackageVersion Include="Microsoft.Identity.Web" Version="1.25.10" />
+        <PackageVersion Include="Microsoft.Identity.Web.UI" Version="1.25.10" />
         <PackageVersion Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
         <PackageVersion Include="Mindscape.Raygun4Net.AspNetCore" Version="6.6.6" />
         <PackageVersion Include="SonarAnalyzer.CSharp" Version="8.51.0.59060" />
