--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -10,9 +10,10 @@
 
     <ItemGroup>
         <PackageReference Include="LigerShark.WebOptimizer.Core" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+        <PackageReference Include="Microsoft.Identity.Web" />
+        <PackageReference Include="Microsoft.Identity.Web.UI" />
         <PackageReference Include="Microsoft.Web.LibraryManager.Build" />
         <PackageReference Include="Mindscape.Raygun4Net.AspNetCore" />
         <PackageReference Include="SonarAnalyzer.CSharp">
