--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -23,11 +23,11 @@
     "ExcludeErrorsFromLocal": true,
     "ApiKey": ""
   },
-  "LocalDevSettings": {
+  "DevSettings": {
+    "UseInMemoryData": true,
+    "UseEfMigrations": false,
     "UseAzureAd": false,
     "LocalUserIsAuthenticated": true,
-    "LocalUserIsAdmin": true,
-    "UseInMemoryData": true,
-    "UseEfMigrations": false
+    "LocalUserIsAdmin": true
   }
 }
