Enable build acceleration in Visual Studio
https://aka.ms/vs-build-acceleration

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,4 +4,8 @@
         <BaseOutputPath>$(BaseProjectArtifactPath)\bin\</BaseOutputPath>
         <BaseIntermediateOutputPath>$(BaseProjectArtifactPath)\obj\</BaseIntermediateOutputPath>
     </PropertyGroup>
+    <PropertyGroup>
+        <!-- https://aka.ms/vs-build-acceleration -->
+        <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
+    </PropertyGroup>
 </Project>
