--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,6 +10,7 @@
         <PackageVersion Include="JetBrains.Annotations" Version="2022.3.1" />
         <PackageVersion Include="LigerShark.WebOptimizer.Core" Version="3.0.372" />
         <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.13" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.13" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.13" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
