Upgrade to .NET 7

--- a/.github/workflows/raygun-deployment.yml
+++ b/.github/workflows/raygun-deployment.yml
@@ -5,7 +5,7 @@ name: Raygun Deployment Tracking
 on:
   push:
     # Update this line with the desired tag prefix, e.g., "prod/*"
-    tags: prod/*
+    tags: [prod/*]
 
 jobs:
   raygun-deployment:
