--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -19,14 +19,42 @@
     "ClientId": "[Enter the Application (client) ID from the Azure portal]",
     "CallbackPath": "/signin-oidc"
   },
+  "SupportSettings": {
+    "CustomerSupportEmail": "Customer.Support@email.invalid",
+    "TechnicalSupportSite": "https://technicalsupport.example.com",
+    "TechnicalSupportEmail": "Technical.Support@email.invalid"
+  },
   "RaygunSettings": {
     "ExcludeErrorsFromLocal": true,
     "ApiKey": ""
   },
-  "UseDevSettings": true,
+  "FileServiceSettings": {
+    "FileService": "FileSystem",
+    "FileSystemBasePath": "../../.artifacts/_appFiles",
+    "NetworkUsername": "",
+    "NetworkDomain": "",
+    "NetworkPassword": "",
+    "AzureAccountName": "",
+    "BlobContainer": "",
+    "BlobBasePath": "ApplicationData/CtsData"
+  },
+  "EmailServiceSettings": {
+    "EnableEmail": false,
+    "SaveEmail": true,
+    "SmtpHost": "localhost",
+    "SmtpPort": 25,
+    "DefaultSender": "CTS.Emailer@email.invalid",
+    "SecureSocketOption": "Auto",
+    "EnableEmailAuditing": true,
+    "AuditEmailRecipients": [
+      "Audit.Recipient@email.invalid"
+    ]
+  },
   "DevSettings": {
+    "UseDevSettings": true,
     "UseInMemoryData": true,
     "UseEfMigrations": false,
+    "DeleteAndRebuildDatabase": true,
     "UseAzureAd": false,
     "LocalUserIsAuthenticated": true,
     "LocalUserIsStaff": true,
