Update WebApp staff dashboard and entity search page

--- a/src/AppServices/AppServices.csproj
+++ b/src/AppServices/AppServices.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" />
+        <PackageReference Include="ClosedXML" />
         <PackageReference Include="FluentValidation.AspNetCore" />
         <PackageReference Include="GaEpd.FileService" />
         <PackageReference Include="JetBrains.Annotations" />
